<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SignInForgotRoot">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textTitle" />

    <TextView
        android:id="@+id/textTitle"
        style="@style/SignInForgotTitle"
        android:text="@string/text_auth_restore_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/phoneNumber"
        style="@style/SignInEditTextPhone"
        android:layout_width="match_parent"
        android:hint="@string/text_auth_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTitle" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password"
        style="@style/SignInForgotEditTextPassword"
        android:fontFamily="@font/poppins"
        android:hint="@string/text_auth_new_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneNumber" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/confirmPassword"
        style="@style/SignInForgotEditTextPassword"
        android:fontFamily="@font/poppins"
        android:hint="@string/text_auth_new_password_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_restore"
        style="@style/SignInForgotButton"
        android:text="@string/text_auth_restore"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmPassword" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:progressTint="#00C853"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_restore"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>