<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/SignInRoot">

    <androidx.constraintlayout.widget.ConstraintLayout style="@style/SingInSubRoot">

        <TextView
            android:id="@+id/textTitle"
            style="@style/SignInTitle"
            android:text="@string/text_auth_login_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/phoneNumber"
            style="@style/SignInEditTextPhone"
            android:hint="@string/text_auth_phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textTitle" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password"
            style="@style/SignInEditTextPassword"
            android:hint="@string/text_auth_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phoneNumber" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/buttonRememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins"
            android:text="@string/text_auth_remember_me"
            android:textColor="@color/color_sign_in_remember_me"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/password"
            app:layout_constraintTop_toBottomOf="@id/password" />

        <TextView
            android:id="@+id/buttonForgotPassword"
            style="@style/SignInForgotText"
            android:text="@string/text_auth_forgot_password"
            app:layout_constraintBottom_toBottomOf="@id/buttonRememberMe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password"
            app:layout_constraintTop_toTopOf="@id/buttonRememberMe" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonLogin"
            style="@style/SignInButton"
            android:text="@string/text_auth_login"
            app:cornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonRememberMe" />

        <androidx.core.widget.ContentLoadingProgressBar
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:progressTint="#00C853"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
            tools:visibility="visible" />

        <!--<androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonLogin">

            <TextView
                android:id="@+id/textNewUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/text_sign_in_new_user"
                android:textColor="@color/color_sign_in_new_user"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/buttonSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/text_sign_in_signup"
                android:textColor="@color/color_sign_in_signup" />

        </androidx.appcompat.widget.LinearLayoutCompat>-->

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>